--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:href": "ng build --base-href ./",
+    "delete:docs": "rm docs/*",
+    "copy:dist": "cp -r ./dist/bases/browser/* ./docs",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist"
   },
   "private": true,
   "dependencies": {
